# Jsonifier

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  DiscordData.json  JsonData.json  License  License.md  ReadMe.md  Stage-1.md  Two-Stages.md  tokei.toml.txt
.github/: FUNDING.yml
Benchmarking/: test_data.json
Benchmarks/: CMakeLists.txt  Common.hpp  GetCommitHash.cmake  Glaze.hpp  Jsonifier.hpp  Simdjson.hpp  Tests.hpp  UnicodeEmoji.hpp  common.hpp  discord.hpp  glaze.hpp  jsonifier.hpp  main.cpp  simdjson.hpp  tests.hpp  twitter.hpp
Benchmarks-2/: common.hpp  jsonifier.hpp  simdjson.hpp
BuildTools/: composer.json  make_vcpkg.php
CMake/: BuildFeatureTester.bat  BuildFeatureTester.sh  CMakeLists.txt  CollectASMCompiler.cmake  DetectArchitecture.cmake  FetchContent.cmake  Jsonifier.cmake  JsonifierConfig.cmake.in  JsonifierDetectArchitecture.cmake  Main.cpp  WriteInstructionHeader.cmake  flags_and_options.cmake  install-config.cmake  main.cpp
Documentation/: CPU_Architecture_Selection.md  Custom_Parsing_And_Serializing.md  Doxyfile  DoxygenLayout.xml  Errors.md  Excluding_Keys.md  Installation.md  Minifying.md  Optimizing_For_Minified_Json.md  Parsing_Arbitrary_Data.md  PartialReading.md  Prettifying.md  ReadMe.md  Reflection.md  Usage_Serializing_Parsing.md  Validating.md
Include/: CompareLong.asm  Jsonifier.hpp
Json/: Abc Test (Minified)-glaze (2).json  Abc Test (Minified)-glaze.json  Abc Test (Minified)-jsonifier.json  Abc Test (Minified)-simdjson.json  Abc Test (Prettified)-glaze.json  Abc Test (Prettified)-jsonifier.json  Abc Test (Prettified)-simdjson.json  Canada Test (Minified)-jsonifier.json  Canada Test (Minified)-simdjson.json  Canada Test (Minified).json  Canada Test (Prettified)-jsonifier.json  Canada Test (Prettified).json  CanadaData-Minified.json  CitmCatalog Test (Minified)-simdjson.json  CitmCatalog Test (Prettified)-simdjson.json  CitmCatalogData-Prettified.json  Discord Test (Minified)-glaze.json  Discord Test (Minified)-simdjson.json  Discord Test (Minified).json  Discord Test (Prettified)-glaze.json  Discord Test (Prettified)-jsonifier.json  Discord Test (Prettified)-simdjson.json  Discord Test (Prettified).json  DiscordData-Minified.json  DiscordData-Prettified.json  DiscordData.json  Json Test (Minified)-glaze.json  Json Test (Minified)-jsonifier.json  Json Test (Minified)-simdjson.json  Json Test (Prettified)-glaze.json  Json Test (Prettified)-jsonifier.json  Json Test (Prettified)-simdjson.json  JsonData-Minified.json  JsonData-Prettified.json  Minify Test-glaze.json  Minify Test-jsonifier.json  Minify Test-simdjson.json  Multi Test (Minified)-simdjson.json  Multi Test (Prettified)-glaze.json  Prettify Test-glaze.json  (+14 more)
Tests/: BoundsTest.hpp  CMakeLists.txt  Canada.hpp  CitmCatalog.hpp  Common.hpp  Conformance.hpp  ConformanceTests.hpp  Discord.hpp  FailTests.hpp  Float.hpp  GenerateGraphs.py  Glaze.hpp  Int.hpp  Jsonifier.hpp  ReadMe.md  ReadMe.mdWindows-MSVC.md  RoundTrip.hpp  Simdjson.hpp  String.hpp  SuccessTests.hpp  Tests.hpp  Twitter.hpp  Uint.hpp  UnicodeEmoji.hpp  main.cpp
Tests/ConformanceTests/: pass1.json  pass2.json
Tests/FailTests/: fail1.json  fail2.json  fail3.json  fail4.json  fail5.json  fail6.json  fail7.json  fail8.json
Tests/FloatValidation/: test1.json  test10.json  test11.json  test12.json  test13.json  test14.json  test15.json  test16.json  test17.json  test18.json  test19.json  test2.json  test20.json  test21.json  test22.json  test23.json  test24.json  test25.json  test26.json  test27.json  test28.json  test29.json  test3.json  test30.json  test31.json  test32.json  test33.json  test34.json  test35.json  test36.json  test37.json  test38.json  test39.json  test4.json  test40.json  test41.json  test42.json  test43.json  test44.json  test45.json  (+29 more)
Tests/IntValidation/: failTest04.json  failTest06.json  failTest07.json  failTest08.json  failTest12.json  failTests.json  passTest03.json  passTest07.json  passTest08.json  passTest09.json  passTest10.json  passTest11.json  passTest12.json  passTest13.json  passTest14.json  passTests.json
Tests/StringValidation/: test1.json  test10.json  test11.json  test2.json  test3.json  test5.json  test6.json  test8.json  test9.json
Tests/UintValidation/: failTest03.json  failTest06.json  failTest09.json  failTest10.json  failTest11.json  failTests.json  passTest04.json  passTest05.json  passTest08.json  passTest09.json  passTest10.json  passTests.json
cmake/: CMakeLists.txt  JsonifierConfig.cmake.in  JsonifierDetectArchitecture.cmake  get_version.cmake  installation_setup.cmake  jsonifier_detect_architecture.cmake  library_setup.cmake  main.cpp
unit-tests/: CMakeLists.txt  all_tests.hpp  apache-builds.hpp  bounds_test.hpp  canada.hpp  citm_catalog.hpp  common.hpp  conformance.hpp  discord.hpp  float.hpp  github_events.hpp  google_maps_response.hpp  instruments.hpp  int.hpp  main.cpp  marine_ik.hpp  mesh.hpp  parsing_tests (2).hpp  parsing_tests.hpp  random.hpp  round_trip.hpp  semanticscholar.hpp  string.hpp  tests.hpp  twitter.hpp  uint.hpp  unicode_emoji.hpp  unit_tests.hpp  utf8_validation.hpp
unit-tests/json/: Abc (Out of Order) Test (Minified).json  Abc Partial Test (Minified).json  Abc Partial Test (Prettified).json  Apache Builds Test (Minified).json  Apache Builds Test (Prettified).json  Bool Test.json  CitmCatalog Test (Prettified).json  Discord Test (Minified).json  Discord Test (Prettified).json  Double Test.json  Github Events Test (Minified).json  Github Events Test (Prettified).json  Google Maps Response Test (Prettified).json  Instruments Test (Minified).json  Instruments Test (Prettified).json  Int64 Test.json  Marine IK Test (Minified).json  Mesh Test (Minified).json  Mesh Test (Prettified).json  Random Test (Minified).json  Random Test (Prettified).json  String Test.json  Twitter Partial Test (Minified).json  Twitter Partial Test (Prettified).json  Twitter Test (Prettified).json  Uint64 Test.json
unit-tests/jsonchecker/: fail35.json
unit-tests/jsonchecker/fail/: fail34.json  fail71.json
unit-tests/round_trip/: semanticscholar.hpp
(+473 files in other folders)
